1. overflow fixed 2. SwissStake title need to be ajust in mobile version to prevent overflow

--- a/src/styles/molecules/footer.scss
+++ b/src/styles/molecules/footer.scss
@@ -21,6 +21,7 @@
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
+  max-width: 1440px;
 
   &-left {
     display: flex;
@@ -67,6 +68,7 @@
 
   &-right {
     display: flex;
+    flex-wrap: wrap;
 
     &--subtitle {
       margin-right: 70px;
